package registry

import (
	"context"

	"github.com/yanshicheng/kube-nova/application/console-api/internal/svc"
	"github.com/yanshicheng/kube-nova/application/console-api/internal/types"
	"github.com/yanshicheng/kube-nova/application/console-rpc/pb"
	"github.com/zeromicro/go-zero/core/logx"
)

type CreateProjectLogic struct {
	logx.Logger
	ctx    context.Context
	svcCtx *svc.ServiceContext
}

// åˆ›å»ºä»“åº“é¡¹ç›®
func NewCreateProjectLogic(ctx context.Context, svcCtx *svc.ServiceContext) *CreateProjectLogic {
	return &CreateProjectLogic{
		Logger: logx.WithContext(ctx),
		ctx:    ctx,
		svcCtx: svcCtx,
	}
}

func (l *CreateProjectLogic) CreateProject(req *types.CreateProjectRequest) (resp string, err error) {
	// ğŸ”§ ä¿®å¤ï¼šè®¾ç½®é»˜è®¤å•ä½
	storageUnit := req.StorageUnit
	if storageUnit == "" {
		storageUnit = "GB" // é»˜è®¤ä¸º GB
	}

	rpcResp, err := l.svcCtx.RepositoryRpc.CreateProject(l.ctx, &pb.CreateProjectReq{
		RegistryUuid: req.RegistryUuid,
		ProjectName:  req.ProjectName,
		IsPublic:     req.IsPublic,
		StorageLimit: req.StorageLimit,
		StorageUnit:  storageUnit,
		AppProjectId: req.AppProjectId,
		ClusterUuid:  req.ClusterUuid,
	})
	if err != nil {
		l.Errorf("RPCè°ƒç”¨å¤±è´¥: %v", err)
		return "", err
	}

	l.Infof("åˆ›å»ºä»“åº“é¡¹ç›®æˆåŠŸ: ProjectId=%d, ProjectName=%s, StorageLimit=%d%s",
		rpcResp.ProjectId, req.ProjectName, req.StorageLimit, storageUnit)
	return "åˆ›å»ºä»“åº“é¡¹ç›®æˆåŠŸ", nil
}
